fix: header icon paths (relative) and simplify vercel.json for static

--- a/index.html
+++ b/index.html
@@ -97,7 +97,17 @@
                 </span>
             </div>
             
-            <a href="https://t.me/nextwavetech0" target="_blank" rel="noopener" class="green-gradient hover:shadow-lg hover:shadow-green-500/25 text-white px-3 py-2 text-xs rounded-lg font-semibold transition-all shadow-lg green-glow inline-block whitespace-nowrap shrink-0 ml-2 md:ml-0 md:px-6 md:py-3 md:text-base">Join Telegram</a>
+            <div class="flex items-center space-x-2 md:space-x-4 ml-2 md:ml-0">
+                <a href="https://wa.me/31651905846" target="_blank" rel="noopener" aria-label="WhatsApp" class="w-8 h-8 md:w-9 md:h-9 rounded-full border border-green-500/50 flex items-center justify-center hover:bg-green-500/10 shrink-0">
+                    <img src="./assets/images/icons/whatsapp_icon-removebg-preview.png" alt="WhatsApp" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
+                </a>
+                <a href="https://signal.me/#eu/8DQ9rk0A0QWJJkndCU0XXC4_t-LqqCZARwTkdFm4IxVyvip0WMZMJZ8RHB77iauB" target="_blank" rel="noopener" aria-label="Signal" class="w-8 h-8 md:w-9 md:h-9 rounded-full border border-green-500/50 flex items-center justify-center hover:bg-green-500/10 shrink-0">
+                    <img src="./assets/images/icons/signal_app_icon-removebg-preview.png" alt="Signal" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
+                </a>
+                <a href="https://t.me/nextwavetech0" target="_blank" rel="noopener" aria-label="Telegram" class="w-8 h-8 md:w-9 md:h-9 rounded-full border border-green-500/50 flex items-center justify-center hover:bg-green-500/10 shrink-0">
+                    <img src="./assets/images/icons/Telegram-icon-removebg-preview.png" alt="Telegram" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
+                </a>
+            </div>
         </div>
     </nav>
 
