feat: add IPTV portfolio grid, mobile header spacing, social icons wired

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </span>
             </div>
             
-            <div class="flex items-center space-x-2 md:space-x-4 ml-2 md:ml-0">
+            <div class="flex items-center space-x-2 md:space-x-4 ml-4 sm:ml-6 md:ml-0">
                 <a href="https://wa.me/31651905846" target="_blank" rel="noopener" aria-label="WhatsApp" class="w-8 h-8 md:w-9 md:h-9 rounded-full border border-green-500/50 flex items-center justify-center hover:bg-green-500/10 shrink-0">
                     <img src="./assets/images/icons/whatsapp_icon-removebg-preview.png" alt="WhatsApp" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
                 </a>
@@ -299,7 +299,7 @@
                     <div class="text-gray-400 text-sm md:text-base">Active Users</div>
                 </div>
                 <div>
-                    <div class="text-4xl md:text-5xl font-extrabold green-text mb-2">50K+</div>
+                    <div class="text-4xl md:text-5xl font-extrabold green-text mb-2">222K+</div>
                     <div class="text-gray-400 text-sm md:text-base">Movies & Shows</div>
                 </div>
                 <div>
@@ -377,6 +377,25 @@
                         <a href="https://t.me/nextwavetech0" target="_blank" rel="noopener" class="green-border text-white px-5 py-2 rounded-lg hover:bg-green-500/10 transition inline-block">Customize</a>
             </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- IPTV Portfolio -->
+    <section class="px-6 py-14">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-4xl md:text-5xl font-extrabold text-white text-center">IPTV Portfolio</h2>
+            <p class="text-lg text-gray-400 text-center mt-2 mb-8">A curated showcase of our IPTV content</p>
+
+            <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3 sm:gap-4">
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/14.jpg" alt="Portfolio 1" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/a99930b1-image16.avif" alt="Portfolio 2" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/future-of-iptv-1024x576.webp" alt="Portfolio 3" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/iptvocean.jpg" alt="Portfolio 4" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/set-iptv-net-iptv.jpg" alt="Portfolio 5" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/The-Future-of-Sports-Broadcasting-is-OTT-Blog-Banner-Inner-Image-1-e1617293556130.jpg" alt="Portfolio 6" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/The-Future-of-Sports-Broadcasting-is-OTT-Blog-Banner-Inner-Image-2.jpg" alt="Portfolio 7" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
+                <div class="overflow-hidden rounded-xl streaming-card"><img src="assets/images/portfolio/Watching-IPTV-on-TV.webp" alt="Portfolio 8" class="w-full h-36 sm:h-40 md:h-48 object-cover" loading="lazy" decoding="async"/></div>
             </div>
         </div>
     </section>
