Disable Telegram links and remove Telegram references from content

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <a href="#" onclick="return false;" aria-label="Signal" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
                     <img src="./assets/images/icons/signal_app_icon-removebg-preview.png" alt="Signal" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
                 </a>
-                <a href="https://t.me/Luis28Madrid" aria-label="Telegram" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
+                <a href="#" onclick="return false;" aria-label="Telegram" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
                     <img src="./assets/images/icons/Telegram-icon-removebg-preview.png" alt="Telegram" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
                 </a>
             </div>
@@ -449,7 +449,7 @@
                         <span class="mt-1 text-sm primary-gradient rounded-full w-6 h-6 flex items-center justify-center primary-glow">3</span>
                         <div>
                             <h3 class="text-white font-semibold">Support That Actually Replies</h3>
-                            <p class="text-gray-400 text-sm">We answer quickly on Telegram and help you get set up on any device.</p>
+                            <p class="text-gray-400 text-sm">We answer quickly and help you get set up on any device.</p>
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
             <div class="streaming-card rounded-2xl p-8">
                 <h3 class="text-2xl font-bold text-white mb-4">How Trex IPTV Works</h3>
                 <ol class="space-y-4 text-gray-300 text-sm">
-                    <li><span class="primary-text font-semibold">1.</span> Choose your plan and contact us via Telegram or WhatsApp.</li>
+                    <li><span class="primary-text font-semibold">1.</span> Choose your plan and contact us via WhatsApp.</li>
                     <li><span class="primary-text font-semibold">2.</span> Receive your login details and step‑by‑step setup guide.</li>
                     <li><span class="primary-text font-semibold">3.</span> Start watching instantly on Smart TV, mobile, desktop and more.</li>
                 </ol>
@@ -559,7 +559,7 @@
                 <div class="streaming-card rounded-2xl p-5 text-left">
                     <h3 class="text-white font-semibold">How do I get support if I’m stuck?</h3>
                     <p class="text-gray-300 text-sm mt-2">
-                        You can contact our team on Telegram or WhatsApp and we’ll walk you through the setup
+                        You can contact our team on WhatsApp and we'll walk you through the setup
                         or help you troubleshoot in just a few minutes.
                     </p>
                 </div>
@@ -602,7 +602,7 @@
             </div>
             <div>
                 <h4 class="text-white font-semibold mb-3">Connect</h4>
-                <a href="https://t.me/Luis28Madrid" class="primary-gradient text-white px-6 py-3 rounded-lg font-semibold primary-glow inline-block">Join Our Telegram</a>
+                <a href="#" onclick="return false;" class="primary-gradient text-white px-6 py-3 rounded-lg font-semibold primary-glow inline-block">Join Our Telegram</a>
             </div>
         </div>
         <div class="max-w-7xl mx-auto mt-10 pt-6 border-t border-gray-800 text-gray-500 text-sm text-center">
