--- a/index.html
+++ b/index.html
@@ -136,14 +136,8 @@
             </div>
             
             <div class="flex items-center space-x-2 md:space-x-4 ml-4 sm:ml-6 md:ml-0">
-                <a href="#" onclick="return false;" aria-label="WhatsApp" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
+                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
                     <img src="./assets/images/icons/whatsapp_icon-removebg-preview.png" alt="WhatsApp" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
-                </a>
-                <a href="#" onclick="return false;" aria-label="Signal" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
-                    <img src="./assets/images/icons/signal_app_icon-removebg-preview.png" alt="Signal" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
-                </a>
-                <a href="#" onclick="return false;" aria-label="Telegram" class="w-8 h-8 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
-                    <img src="./assets/images/icons/Telegram-icon-removebg-preview.png" alt="Telegram" class="w-4 h-4 md:w-5 md:h-5 object-contain"/>
                 </a>
             </div>
         </div>
