Remove Get Started button from CTA, redirect all buttons to WhatsApp, change footer to Contact Us

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </p>
             
             <div class="flex justify-center">
-                <a href="#" onclick="return false;" class="primary-gradient hover:shadow-lg hover:brand-shadow-25 text-white px-10 py-4 rounded-lg text-lg font-bold transition-all transform hover:scale-105 shadow-2xl flex items-center space-x-3 primary-glow">
+                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient hover:shadow-lg hover:brand-shadow-25 text-white px-10 py-4 rounded-lg text-lg font-bold transition-all transform hover:scale-105 shadow-2xl flex items-center space-x-3 primary-glow">
                     <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M8 5v10l8-5-8-5z"/>
                     </svg>
@@ -311,7 +311,7 @@
                 </div>
 
                 <div class="mt-8 flex justify-center">
-                    <a href="#" onclick="return false;" class="primary-gradient hover:shadow-lg hover:brand-shadow-25 text-white font-semibold px-6 py-3 rounded-xl primary-glow inline-block">Get Started Today</a>
+                    <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient hover:shadow-lg hover:brand-shadow-25 text-white font-semibold px-6 py-3 rounded-xl primary-glow inline-block">Get Started Today</a>
                 </div>
             </div>
 
@@ -372,7 +372,7 @@
                     <h3 class="text-xl font-semibold text-white">Premium Subscription</h3>
                     <p class="text-gray-400 mt-3">Full access to our entertainment library with unlimited streaming subscriptions</p>
                     <div class="mt-auto flex justify-center">
-                        <a href="#" onclick="return false;" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Learn More</a>
+                        <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Learn More</a>
                     </div>
                 </div>
 
@@ -384,7 +384,7 @@
                     <h3 class="text-xl font-semibold text-white">Panel Provision</h3>
                     <p class="text-gray-400 mt-3">Complete streaming panel solutions for businesses and resellers</p>
                     <div class="mt-auto flex justify-center">
-                        <a href="#" onclick="return false;" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Explore</a>
+                        <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Explore</a>
                     </div>
                 </div>
 
@@ -396,7 +396,7 @@
                     <h3 class="text-xl font-semibold text-white">Credit System</h3>
                     <p class="text-gray-400 mt-3">Flexible payment options with our digital credit system</p>
                     <div class="mt-auto flex justify-center">
-                        <a href="#" onclick="return false;" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Get Credits</a>
+                        <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Get Credits</a>
                     </div>
                 </div>
 
@@ -408,7 +408,7 @@
                     <h3 class="text-xl font-semibold text-white">Rebrand Services</h3>
                     <p class="text-gray-400 mt-3">Personalized streaming experience with your own custom branding</p>
                     <div class="mt-auto flex justify-center">
-                        <a href="#" onclick="return false;" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Customize</a>
+                        <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-border text-white px-5 py-2 rounded-lg hover:bg-orange-500/10 transition inline-block">Customize</a>
             </div>
                 </div>
             </div>
@@ -570,11 +570,6 @@
             <p class="text-xl text-gray-300 mb-6">
                 Join thousands of users who trust Trex IPTV for their entertainment needs.
             </p>
-            <div class="flex justify-center">
-                <a href="#" onclick="return false;" class="primary-gradient text-white px-8 py-4 rounded-full text-lg font-semibold hover:shadow-lg hover:shadow-orange-500/25 transition-all transform hover:scale-105 primary-glow inline-block">
-                    Get Started Now
-                </a>
-            </div>
         </div>
     </section>
 
@@ -596,7 +591,7 @@
             </div>
             <div>
                 <h4 class="text-white font-semibold mb-3">Connect</h4>
-                <a href="#" onclick="return false;" class="primary-gradient text-white px-6 py-3 rounded-lg font-semibold primary-glow inline-block">Join Our Telegram</a>
+                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-6 py-3 rounded-lg font-semibold primary-glow inline-block">Contact Us</a>
             </div>
         </div>
         <div class="max-w-7xl mx-auto mt-10 pt-6 border-t border-gray-800 text-gray-500 text-sm text-center">
