Add subscription pricing section with 4 packages in tabular format

--- a/index.html
+++ b/index.html
@@ -275,6 +275,103 @@
         </div>
     </section>
 
+    <!-- Subscription Pricing -->
+    <section class="px-6 py-16 bg-light-brand light-section">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-4xl md:text-5xl font-extrabold text-white text-center mb-4">Choose Your Plan</h2>
+            <p class="text-lg text-gray-400 text-center mb-12">Flexible subscription options to fit your entertainment needs</p>
+
+            <div class="overflow-x-auto">
+                <table class="w-full border-collapse">
+                    <thead>
+                        <tr class="border-b-2 brand-outline-50">
+                            <th class="text-left py-4 px-6 text-white font-semibold text-lg">Package</th>
+                            <th class="text-left py-4 px-6 text-white font-semibold text-lg">Duration</th>
+                            <th class="text-left py-4 px-6 text-white font-semibold text-lg">Price</th>
+                            <th class="text-left py-4 px-6 text-white font-semibold text-lg">Description</th>
+                            <th class="text-center py-4 px-6 text-white font-semibold text-lg">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="border-b brand-outline-30 hover:brand-bg-10 transition">
+                            <td class="py-6 px-6">
+                                <div class="text-xl font-bold primary-text">Basic Plan</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300">1 Month</td>
+                            <td class="py-6 px-6">
+                                <div class="text-2xl font-bold text-white">€15,99</div>
+                                <div class="text-sm text-gray-400">per month</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300 text-sm max-w-md">
+                                Perfect for trying out Trex IPTV. Get full access to all 180,000+ movies, series, and 42,000+ live channels for one month. Ideal for short-term viewing or testing our service.
+                            </td>
+                            <td class="py-6 px-6 text-center">
+                                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-6 py-2 rounded-lg font-semibold primary-glow inline-block hover:shadow-lg transition">Subscribe</a>
+                            </td>
+                        </tr>
+                        <tr class="border-b brand-outline-30 hover:brand-bg-10 transition">
+                            <td class="py-6 px-6">
+                                <div class="text-xl font-bold primary-text">Popular Plan</div>
+                                <div class="text-xs primary-text mt-1">Most Popular</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300">3 Months</td>
+                            <td class="py-6 px-6">
+                                <div class="text-2xl font-bold text-white">€35,99</div>
+                                <div class="text-sm text-gray-400">€12,00/month</div>
+                                <div class="text-xs primary-text mt-1">Save 25%</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300 text-sm max-w-md">
+                                Our most popular choice! Enjoy 3 months of unlimited streaming with significant savings. Perfect for regular viewers who want premium entertainment without the commitment of a long-term plan.
+                            </td>
+                            <td class="py-6 px-6 text-center">
+                                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-6 py-2 rounded-lg font-semibold primary-glow inline-block hover:shadow-lg transition">Subscribe</a>
+                            </td>
+                        </tr>
+                        <tr class="border-b brand-outline-30 hover:brand-bg-10 transition">
+                            <td class="py-6 px-6">
+                                <div class="text-xl font-bold primary-text">Value Plan</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300">6 Months</td>
+                            <td class="py-6 px-6">
+                                <div class="text-2xl font-bold text-white">€59,99</div>
+                                <div class="text-sm text-gray-400">€10,00/month</div>
+                                <div class="text-xs primary-text mt-1">Save 37%</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300 text-sm max-w-md">
+                                Great value for long-term entertainment! Get 6 months of unlimited access to all content. Best for families and dedicated streamers who want maximum savings and uninterrupted viewing.
+                            </td>
+                            <td class="py-6 px-6 text-center">
+                                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-6 py-2 rounded-lg font-semibold primary-glow inline-block hover:shadow-lg transition">Subscribe</a>
+                            </td>
+                        </tr>
+                        <tr class="border-b brand-outline-30 hover:brand-bg-10 transition">
+                            <td class="py-6 px-6">
+                                <div class="text-xl font-bold primary-text">Premium Plan</div>
+                                <div class="text-xs primary-text mt-1">Best Value</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300">12 Months</td>
+                            <td class="py-6 px-6">
+                                <div class="text-2xl font-bold text-white">€95,99</div>
+                                <div class="text-sm text-gray-400">€8,00/month</div>
+                                <div class="text-xs primary-text mt-1">Save 50%</div>
+                            </td>
+                            <td class="py-6 px-6 text-gray-300 text-sm max-w-md">
+                                The ultimate package for serious streamers! Enjoy a full year of premium entertainment at the lowest monthly rate. Maximum savings with uninterrupted access to all movies, series, and live channels.
+                            </td>
+                            <td class="py-6 px-6 text-center">
+                                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-6 py-2 rounded-lg font-semibold primary-glow inline-block hover:shadow-lg transition">Subscribe</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="mt-8 text-center">
+                <p class="text-gray-400 text-sm">All plans include access to 180,000+ movies, 42,000+ live channels, and support for all devices</p>
+            </div>
+        </div>
+    </section>
+
     <!-- Watch Anywhere, Anytime -->
     <section class="relative px-6 py-16 overflow-hidden">
         <!-- Background image -->
