--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
     </section>
 
     <!-- Subscription Pricing -->
-    <section class="px-6 py-16 bg-light-brand light-section">
+    <section class="px-6 py-16 bg-light-brand">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-4xl md:text-5xl font-extrabold text-white text-center mb-4">Choose Your Plan</h2>
-            <p class="text-lg text-gray-400 text-center mb-12">Flexible subscription options to fit your entertainment needs</p>
+            <p class="text-lg text-gray-300 text-center mb-12">Flexible subscription options to fit your entertainment needs</p>
 
             <div class="overflow-x-auto">
                 <table class="w-full border-collapse">
@@ -367,7 +367,7 @@
             </div>
 
             <div class="mt-8 text-center">
-                <p class="text-gray-400 text-sm">All plans include access to 180,000+ movies, 42,000+ live channels, and support for all devices</p>
+                <p class="text-gray-300 text-sm">All plans include access to 180,000+ movies, 42,000+ live channels, and support for all devices</p>
             </div>
         </div>
     </section>
@@ -422,24 +422,24 @@
 
 
     <!-- Stats Section -->
-    <section class="px-6 py-12 bg-light-brand light-section">
+    <section class="px-6 py-12 bg-light-brand">
         <div class="max-w-6xl mx-auto">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-8 text-center place-items-center justify-items-center">
                 <div>
                     <div class="text-4xl md:text-5xl font-extrabold primary-text mb-2">10K+</div>
-                    <div class="text-gray-400 text-sm md:text-base">Happy Trex IPTV Viewers</div>
+                    <div class="text-gray-300 text-sm md:text-base">Happy Trex IPTV Viewers</div>
                 </div>
                 <div>
                     <div class="text-4xl md:text-5xl font-extrabold primary-text mb-2">25K+</div>
-                    <div class="text-gray-400 text-sm md:text-base">Movies & Shows</div>
+                    <div class="text-gray-300 text-sm md:text-base">Movies & Shows</div>
                 </div>
                 <div>
                     <div class="text-4xl md:text-5xl font-extrabold primary-text mb-2">99.9%</div>
-                    <div class="text-gray-400 text-sm md:text-base">Uptime</div>
+                    <div class="text-gray-300 text-sm md:text-base">Uptime</div>
                 </div>
                 <div>
                     <div class="text-4xl md:text-5xl font-extrabold primary-text mb-2">4.9</div>
-                    <div class="text-gray-400 flex items-center justify-center text-sm md:text-base">
+                    <div class="text-gray-300 flex items-center justify-center text-sm md:text-base">
                         <svg class="w-5 h-5 text-yellow-400 mr-1" fill="currentColor" viewBox="0 0 20 20">
                             <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
                         </svg>
@@ -455,10 +455,10 @@
     
 
     <!-- Our Entertainment Solutions (4th section) -->
-    <section class="px-6 py-14 bg-light-brand light-section">
+    <section class="px-6 py-14 bg-light-brand">
         <div class="max-w-7xl mx-auto">
             <h2 class="text-4xl md:text-5xl font-extrabold text-white text-center">Our Entertainment Solutions</h2>
-            <p class="text-lg text-gray-400 text-center mt-2 mb-8">Flexible options to fit your streaming needs</p>
+            <p class="text-lg text-gray-300 text-center mt-2 mb-8">Flexible options to fit your streaming needs</p>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 place-items-center justify-items-center">
                 <div class="solution-card streaming-card rounded-2xl p-8 text-center w-full min-h-[380px] flex flex-col">
@@ -659,7 +659,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="px-6 py-16 bg-light-brand light-section">
+    <section class="px-6 py-16 bg-light-brand">
         <div class="max-w-4xl mx-auto text-center">
             <h2 class="text-4xl font-bold text-white mb-6">
                 Ready to Start Streaming with Trex IPTV?
