Ensure WhatsApp buttons are clickable with proper cursor and hover effects

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             
             <div class="flex items-center ml-2 sm:ml-4 md:ml-0">
-                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="w-9 h-9 sm:w-10 sm:h-10 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0">
+                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp" class="w-9 h-9 sm:w-10 sm:h-10 md:w-9 md:h-9 rounded-full border brand-outline-50 flex items-center justify-center hover:brand-bg-10 shrink-0 cursor-pointer transition">
                     <img src="./assets/images/icons/whatsapp_icon-removebg-preview.png" alt="WhatsApp" class="w-5 h-5 sm:w-6 sm:h-6 object-contain"/>
                 </a>
             </div>
@@ -731,7 +731,7 @@
             </div>
             <div>
                 <h4 class="text-white font-semibold mb-3">Connect</h4>
-                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-5 sm:px-6 py-2.5 sm:py-3 rounded-lg font-semibold primary-glow inline-block text-sm sm:text-base w-full sm:w-auto text-center">Contact Us</a>
+                <a href="https://wa.me/qr/3AOHSSPUNSEIE1" target="_blank" rel="noopener noreferrer" class="primary-gradient text-white px-5 sm:px-6 py-2.5 sm:py-3 rounded-lg font-semibold primary-glow inline-block text-sm sm:text-base w-full sm:w-auto text-center cursor-pointer hover:opacity-90 transition">Contact Us</a>
             </div>
         </div>
         <div class="max-w-7xl mx-auto mt-10 pt-6 border-t border-gray-800 text-gray-500 text-sm text-center">
